Wed Nov 29 19:47:15 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BMakeWorkspaceCreator.pm:
        * modules/MakeWorkspaceBase.pm:
        * modules/MakeWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:

          Factored much of the common code in these workspace types into a
          single base module.

        * modules/BDSWorkspaceCreator.pm:
        * modules/CCWorkspaceCreator.pm:
        * modules/EM3WorkspaceCreator.pm:
        * modules/HTMLWorkspaceCreator.pm:
        * modules/SLEWorkspaceCreator.pm:
        * modules/VC6WorkspaceCreator.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/WorkspaceCreator.pm:

          Factored out the workspace_file_name method into the
          WorkspaceCreator.

Wed Nov 29 19:07:38 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * docs/MPC.sgml:
        * docs/USAGE:
        * modules/MPC.pm:
        * modules/MWC.pm:
        * modules/VC8WebProjectCreator.pm:
        * modules/VC8WebWorkspaceCreator.pm:

          Removed the vc8web project type.  It has been replace with the
          'webapp' project keyword in combination with the vc8 projec type.

Wed Nov 29 18:18:54 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WorkspaceCreator.pm:

          Fixed a bug where an aggregated workspace with scopes (other than
          exclude) would not be parsed properly.  Thanks to James Hill
          <hillj@isis.vanderbilt.edu> for bringing this to my attention.

Wed Nov 29 12:52:04 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/automake.mpd:

          Moved the compile_flags portion out of the CPPFLAGS_COMMON section
          into the specific _CPPFLAGS settings to allow users to put
          compile_flags settings inside the configuration definitions.

Tue Nov 28 17:37:31 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:
        * templates/automake.mpd:
